[gd_scene load_steps=7 format=3 uid="uid://drrj27plfuxpt"]

[ext_resource type="Script" path="res://Scripts/Interfaces/EmailModal.gd" id="1_e7srn"]
[ext_resource type="Script" path="res://Scripts/Interfaces/EmailList.gd" id="2_2b8lq"]
[ext_resource type="PackedScene" uid="uid://cxjeo4gf3f2a3" path="res://Scenes/Emails/email_list_display.tscn" id="3_7akpf"]
[ext_resource type="PackedScene" uid="uid://cq2fpt0fc6brl" path="res://Scenes/Emails/email_body_container.tscn" id="4_1q7dg"]
[ext_resource type="Texture2D" uid="uid://ci2ghcg7qj01l" path="res://Sprites/menuHeader.png" id="5_fa6tt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vibnb"]
bg_color = Color(0, 0, 0, 1)

[node name="EmailModal" type="MarginContainer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 100
script = ExtResource("1_e7srn")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="SettingsMarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 110
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 20

[node name="TitlePanel" type="Panel" parent="PanelContainer/SettingsMarginContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_vibnb")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/SettingsMarginContainer/TitlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="PanelContainer/SettingsMarginContainer/TitlePanel/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.968627, 0.952941, 0.92549, 1)
theme_override_font_sizes/font_size = 40
text = "Inbox"
vertical_alignment = 1

[node name="EmailListContainer" type="MarginContainer" parent="PanelContainer/SettingsMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_top = 120

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/SettingsMarginContainer/EmailListContainer"]
layout_mode = 2

[node name="EmailList" type="VBoxContainer" parent="PanelContainer/SettingsMarginContainer/EmailListContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 30
script = ExtResource("2_2b8lq")
email_list_scene = ExtResource("3_7akpf")

[node name="EmailBodyContainer" parent="PanelContainer/SettingsMarginContainer" instance=ExtResource("4_1q7dg")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="CloseButton" type="TextureButton" parent="."]
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("5_fa6tt")

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
